Updates to run build with jdk 17